Add Batch 5: orchestration-service module

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>orchestration-service</module>
         <module>common</module>
         <module>payment-service</module>
         <module>onchain-service</module>
